@@ -5,47 +5,50 @@
 
 	<h1><f:translate id="configuration_details" arguments="{0: '{ex:be.tableTitle(table: table)}', 1: index}" /></h1>
 
-	<div id="tx_externalimport_details">
-		<f:comment>TODO: Clean up tab markup when support for TYPO3 10 is dropped</f:comment>
-		<ul class="nav nav-tabs t3js-tabs" role="tablist" data-store-last-tab="1">
-			<li class="t3js-tabmenu-item nav-item active" role="presentation">
-				<a href="#ctrl" class="nav-link active" role="tab" data-toggle="tab" data-bs-toggle="tab">
-					<f:translate id="general_information" />
-				</a>
-			</li>
-			<li class="t3js-tabmenu-item nav-item" role="presentation">
-				<a href="#columns" class="nav-link" role="tab" data-toggle="tab" data-bs-toggle="tab">
-					<f:translate id="columns_mapping" />
-				</a>
-			</li>
-			<li class="t3js-tabmenu-item nav-item" role="presentation">
-				<a href="#steps" class="nav-link" role="tab" data-toggle="tab" data-bs-toggle="tab">
-					<f:translate id="steps" />
-				</a>
-			</li>
-		</ul>
-		<div class="tab-content">
-			<div role="tabpanel" class="tab-pane active" id="ctrl">
-				<div class="panel panel-tab">
-					<div class="panel-body">
-						<f:render partial="DataModule/GeneralConfigurationTab" arguments="{table: table, configuration: configuration}" />
+	<f:if condition="{configuration}">
+		<div id="tx_externalimport_details">
+			<f:comment>TODO: Clean up tab markup when support for TYPO3 10 is dropped</f:comment>
+			<ul class="nav nav-tabs t3js-tabs" role="tablist" data-store-last-tab="1">
+				<li class="t3js-tabmenu-item nav-item active" role="presentation">
+					<a href="#ctrl" class="nav-link active" role="tab" data-toggle="tab" data-bs-toggle="tab">
+						<f:translate id="general_information" />
+					</a>
+				</li>
+				<li class="t3js-tabmenu-item nav-item" role="presentation">
+					<a href="#columns" class="nav-link" role="tab" data-toggle="tab" data-bs-toggle="tab">
+						<f:translate id="columns_mapping" />
+					</a>
+				</li>
+				<li class="t3js-tabmenu-item nav-item" role="presentation">
+					<a href="#steps" class="nav-link" role="tab" data-toggle="tab" data-bs-toggle="tab">
+						<f:translate id="steps" />
+					</a>
+				</li>
+			</ul>
+			<div class="tab-content">
+				<div role="tabpanel" class="tab-pane active" id="ctrl">
+					<div class="panel panel-tab">
+						<div class="panel-body">
+							<f:render partial="DataModule/GeneralConfigurationTab" arguments="{table: table, configuration: configuration}" />
+						</div>
 					</div>
 				</div>
-			</div>
-			<div role="tabpanel" class="tab-pane" id="columns">
-				<div class="panel panel-tab">
-					<div class="panel-body">
-						<f:render partial="DataModule/ColumnConfigurationTab" arguments="{table: table, configuration: configuration}" />
+				<div role="tabpanel" class="tab-pane" id="columns">
+					<div class="panel panel-tab">
+						<div class="panel-body">
+							<f:render partial="DataModule/ColumnConfigurationTab" arguments="{table: table, configuration: configuration}" />
+						</div>
 					</div>
 				</div>
-			</div>
-			<div role="tabpanel" class="tab-pane" id="steps">
-				<div class="panel panel-tab">
-					<div class="panel-body">
-						<f:render partial="DataModule/StepsTab" arguments="{configuration: configuration}" />
+				<div role="tabpanel" class="tab-pane" id="steps">
+					<div class="panel panel-tab">
+						<div class="panel-body">
+							<f:render partial="DataModule/StepsTab" arguments="{configuration: configuration}" />
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
+	</f:if>
+
 </html>
